--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index de Kendall</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Page name</title>
   </head>
-  <body></body>
+  <body>
+    <h1 id="js-title">Placeholder for the title</h1>
+    <h2 id="js-imgdate">Placeholder for the date</h2>
+    
+    <div class="container">
+      <img src="meme.png" id="js-img" alt="Placeholder for the picture of the day">
+      <div>
+  </body>
 </html>
