--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css">
-    <title>Page name</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>MemeHub</title>
   </head>
   <body>
-    <h1 id="js-title">Placeholder for the title</h1>
-    <h2 id="js-imgdate">Placeholder for the date</h2>
-    
+    <h1 id="js-title">MemeHub</h1>
+
     <div class="container">
-      <img src="meme.png" id="js-img" alt="Placeholder for the picture of the day">
-      <div>
+      <img src="meme.png" id="js-img" alt="Placeholder for the meme" />
+      <img src="meme2.jpg" id="js-img" alt="Placeholder for the meme" />
+      <img src="meme3.jpeg" id="js-img" alt="Placeholder for the meme" />
+    </div>
   </body>
 </html>
