--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Index de Kendall</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <article class="julio-article">
+        <h1>This is an unnecesary header</h1>
+        <img
+          src="https://i.pinimg.com/originals/74/6f/9b/746f9b131bbde7681c58a716d3717324.gif"
+          class="julio-article__gif"
+          alt="jesse pinkman"
+        />
+        <button class="google-login">Login</button>
+      </article>
+    </main>
+  </body>
 </html>
