Added main section. Added main Lorem section

--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index de Kendall</title>
   </head>
-  <body></body>
+  <body>
+    <article>
+      <h1 class="heading1">Lorem ipsum</h1>
+      <p class="main-text">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum sunt
+        laboriosam quas. Molestias, vero sequi harum sit nam dolore. Modi vel,
+        ea quisquam quo quibusdam quasi obcaecati nam quidem similique.
+      </p>
+    </article>
+  </body>
 </html>
