--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Index de Kendall</title>
   </head>
-  <body></body>
+  <body>
+    <div class="google-login-wrapper">
+      <div class="google-login">
+        <img class="google-login__google" src="./img/google-logo.svg" alt="" />
+        <span class="google-login__text">Login with Google</span>
+      </div>
+    </div>
+  </body>
 </html>
